[gd_scene load_steps=10 format=3 uid="uid://coe38e75le0dh"]

[ext_resource type="Script" uid="uid://bpqfgxxfv1p5p" path="res://scenes/ui/tab_button/tab_button.gd" id="1_h7bh8"]
[ext_resource type="PackedScene" uid="uid://duwxqia2hvbth" path="res://scenes/ui/generic_panel/generic_panel.tscn" id="2_at6ks"]
[ext_resource type="PackedScene" uid="uid://4qjx8c3wfygx" path="res://scenes/ui/generic_label/generic_label.tscn" id="2_fkekb"]
[ext_resource type="Shader" uid="uid://2iyv7xdg88rp" path="res://resources/shaders/global_colors.gdshader" id="3_w53ck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hcjsd"]
resource_local_to_scene = true
shader = ExtResource("3_w53ck")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hy5dw"]
resource_local_to_scene = true
shader = ExtResource("3_w53ck")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k6gs1"]
resource_local_to_scene = true
shader = ExtResource("3_w53ck")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mskft"]
resource_local_to_scene = true
shader = ExtResource("3_w53ck")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_57a5f"]
resource_local_to_scene = true
shader = ExtResource("3_w53ck")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[node name="TabButton" type="MarginContainer"]
custom_minimum_size = Vector2(70, 26)
offset_right = 70.0
offset_bottom = 26.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
script = ExtResource("1_h7bh8")

[node name="BackPanel" parent="." instance=ExtResource("2_at6ks")]
material = SubResource("ShaderMaterial_hcjsd")
layout_mode = 2
region_rect = Rect2(0, 0, 7, 5)
patch_margin_top = 4
patch_margin_bottom = 2

[node name="PressedPanel" parent="." instance=ExtResource("2_at6ks")]
visible = false
material = SubResource("ShaderMaterial_hy5dw")
layout_mode = 2
region_rect = Rect2(0, 0, 7, 5)
patch_margin_top = 4
patch_margin_bottom = 2

[node name="HoverPanel" parent="." instance=ExtResource("2_at6ks")]
visible = false
material = SubResource("ShaderMaterial_k6gs1")
layout_mode = 2
region_rect = Rect2(0, 0, 7, 5)
patch_margin_top = 4
patch_margin_bottom = 2

[node name="NameLabel" parent="." instance=ExtResource("2_fkekb")]
material = SubResource("ShaderMaterial_mskft")
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 16
text = "name"
horizontal_alignment = 1

[node name="IconTextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_57a5f")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5
